correction on mobile navbar

--- a/frontend/packs/application.pcss
+++ b/frontend/packs/application.pcss
@@ -35,6 +35,11 @@ h2 a:hover {
   padding: 0;
   margin-right: 30px;
 }
+@media screen and (max-width: 640px) {
+  .navbar-brand {
+    margin-right: 0;
+  }
+}
 .navbar img {
   height: 65px;
 }
